Tue Mar 07 04:30:45 GMT 2006  Olly Betts <olly@survex.com>

	* python/Makefile.am: Use the fairly new "swig -O" option for the
	  "modern" python bindings as it generates a smaller glue library
	  and runs faster.

Fri Mar 03 00:51:08 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Report which languages we're building bindings for
	  just before configure finishes.

Thu Mar 02 04:26:14 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Add a better check for Python's distutils.sysconfig
	  not being available (the previous check didn't actually work), and
	  mention in the warning/error that we give that the solution is
	  probably to install a python-dev or python-devel package.

Thu Mar 02 02:45:00 GMT 2006  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/php.ini: php -n avoids reading any php.ini, but
	  the compiled in default may be to enable the dubiously named
	  "safe_mode" which prevents dl() being used so "make check" fails.
	  So instead provide a very simple php.ini which turns off safe_mode
	  and makes sure enable_dl is on.

Thu Feb 23 16:15:41 GMT 2006  Olly Betts <olly@survex.com>

	* xapian.i: Make the stub definitions for disabled backends static.

Tue Feb 21 23:23:59 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Catch the case where the user has python installed
	  but not the module "distutils.sysconfig".

Tue Feb 21 23:02:18 GMT 2006  Olly Betts <olly@survex.com>

	* python/Makefile.am: Fix so "make check" works in VPATH builds.

Tue Feb 21 21:15:10 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/,xapian.i: Override deprecation warnings for Xapian
	  methods/functions/etc.

Tue Feb 21 12:12:48 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Don't quote $PHP in AC_PATH_PROGS to avoid
	  "checking for ... no" message.

Tue Feb 21 00:19:57 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.4.

Sun Feb 19 23:21:29 GMT 2006  Olly Betts <olly@survex.com>
